# win32-safety-experiments

./: Cargo.toml  Readme.md
examples/: MessageBox.rs
functions/: GetLastError.rs  MessageBoxA.rs  MessageBoxExA.rs  MessageBoxIndirectA.rs  SetLastError.rs
src/: lib.rs
structures/: MSGBOXPARAMSA.rs
