[package]
name    = "maulingmonkey-win32-safety-experiments"
repository = "https://github.com/MaulingMonkey/win32-safety-experiments"
version = "0.0.0-git"
edition = "2021"

[dependencies]
abistr = { git = "https://github.com/MaulingMonkey/abistr", rev = "a9a9a67cb1563719aaea6863b958ef9ed0cce544" } # ≈ 0.4
bytemuck = { version = "1.19.0", features = ["derive"] }
firehazard = "0.0.0-2022-09-10"
hwnd0 = { version = "0.0.0-2024-01-10", features = ["bytemuck-1", "hwnd-from-usize", "winapi-0-3"] }
winapi = { version = "0.3.9", features = ["errhandlingapi", "impl-default", "winerror", "winnt"] }
winresult = "0.1.3"
